--- a/LoginAgreeYa/appsettings.json
+++ b/LoginAgreeYa/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailConfiguration": {
+    "From": "hudge.trimbakeshwar@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "hudge.trimbakeshwar@gmail.com",
+    "Password": "SUraj@123#"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:7094",
+    "ValidIssuer": "https://localhost:7094",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+  },
   "AllowedHosts": "*"
 }
