added identity server authentication and autherization

--- a/LoginAgreeYa/appsettings.json
+++ b/LoginAgreeYa/appsettings.json
@@ -5,16 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ConnStr": "Server=localhost\\MSSQLSERVER01;Database=AggreyaDBs;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "EmailConfiguration": {
-    "From": "hudge.trimbakeshwar@gmail.com",
+    "From": "htrimbakeshwar@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "hudge.trimbakeshwar@gmail.com",
-    "Password": "SUraj@123#"
+    "Username": "htrimbakeshwar@gmail.com",
+    "Password": "bokeopjfdyyajrxs"
   },
   "JWT": {
-    "ValidAudience": "http://localhost:7094",
-    "ValidIssuer": "https://localhost:7094",
+    //"ValidAudience": "http://localhost:7094",
+    //"ValidIssuer": "https://localhost:7094",
+    "ValidAudience": "sample",
+    "ValidIssuer": "sample",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   },
   "AllowedHosts": "*"
